# sensorforge

./: .gitignore  CONTRIBUTING.md  README.md  build.sh
Scripts/: convert_to_lerobot.py
SensorForge/: BLEBridge.swift  BLEPairingView.swift  CaptureEngine.swift  HeadlessStart.swift  Info.plist  MainCaptureView.swift  SensorForgeApp.swift  WiFiBridge.swift
SensorForge.xcodeproj/: project.pbxproj
SensorForge/App/: SensorForgeApp.swift
SensorForge/Export/: CSVExporter.swift
SensorForge/Managers/: ARKitManager.swift  AudioCaptureManager.swift  BLEBridge.swift  BarometerManager.swift  CountdownTimer.swift  LocationManager.swift  MotionManager.swift  RecordingCoordinator.swift  ShakeDetector.swift  TimestampProvider.swift
SensorForge/Models/: SensorData.swift  SessionMetadata.swift
SensorForge/Views/: ContentView.swift  RecordingView.swift  SensorStatusView.swift  SessionDetailView.swift  SessionListView.swift  SettingsView.swift
crates/cuda/: Cargo.toml
crates/ipc/: Cargo.toml
crates/types/: Cargo.toml
ios/: README.md
ios/SensorForge/: HeadlessStart.swift  MainCaptureView.swift  SensorForgeApp.swift  SyncClock.swift  WiFiBridge.swift
jetson/: README.md  autonomous_explorer.py  debug_wakeword.py  gemini_vision.py  launch_qualia.sh  lore_store.py  manual_drive.py  motor_test.py  qualia_audio.py  qualia_bridge.py  qualia_detect.py  qualia_embed.py  session_recorder.py  setup.sh  setup_qualia.sh  ugv_driver.py  verify_stack.sh  voice_assistant.py  voice_assistant.service  wifi_bridge.py
kernels/: belief_update.metal
protocol/: README.md  messages.py  schema.json
qualia/: Cargo.toml  README.md  qualia.json
qualia/crates/cuda/: Cargo.toml
qualia/crates/cuda/src/: lib.rs
qualia/crates/ipc/src/: lib.rs
qualia/crates/metal/: Cargo.toml
qualia/crates/metal/src/: lib.rs
qualia/crates/shm/: Cargo.toml
qualia/crates/shm/src/: lib.rs
qualia/crates/types/src/: lib.rs
qualia/kernels/: belief_update.cu  belief_update.metal  factor_pressure.cu  factor_pressure.metal
qualia/runners/agent/src/: main.rs
qualia/runners/agent/static/: index.html
qualia/runners/camera/: Cargo.toml
qualia/runners/camera/src/: main.rs
qualia/runners/coach/: Cargo.toml
qualia/runners/coach/src/: main.rs
qualia/runners/health/: Cargo.toml
qualia/runners/health/src/: main.rs
qualia/runners/init/src/: main.rs
qualia/runners/l0-superposition/: Cargo.toml
qualia/runners/l0-superposition/src/: main.rs
qualia/runners/l1-belief/: Cargo.toml
qualia/runners/l1-belief/src/: main.rs
qualia/runners/l2-belief/: Cargo.toml
qualia/runners/l2-belief/src/: main.rs
qualia/runners/l3-belief/: Cargo.toml
qualia/runners/l3-belief/src/: main.rs
qualia/runners/l4-behavior/: Cargo.toml
qualia/runners/l4-behavior/src/: main.rs
qualia/runners/l5-behavior/: Cargo.toml
qualia/runners/l5-behavior/src/: main.rs
qualia/runners/l6-semantic/: Cargo.toml
qualia/runners/l6-semantic/src/: main.rs
qualia/runners/vision/: Cargo.toml
qualia/runners/vision/src/: main.rs
qualia/runners/watch/src/: main.rs
runners/agent/: Cargo.toml
runners/init/: Cargo.toml
runners/l1-belief/: Cargo.toml
scripts/: convert_to_lerobot.py  merge_sessions.py
(+16 files in other folders)
