[package]
name = "qualia-cuda"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "cudarc wrapper, .cubin loading, stream management"

[dependencies]
qualia-types.workspace = true
qualia-shm.workspace = true
cudarc = { version = "0.12", features = ["std", "driver", "nvrtc", "cuda-version-from-build-system"] }
