[package]
name = "qualia-l2-belief"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["metal"]
cuda = ["qualia-cuda"]
metal = ["qualia-metal"]

[dependencies]
qualia-types.workspace = true
qualia-shm.workspace = true
qualia-metal = { workspace = true, optional = true }
qualia-cuda = { workspace = true, optional = true }
